# whisper_asr

./: AudioStreamer.cpp  AudioStreamer.h  README.md  SETUP_README.md  WhisperBackend.cpp  WhisperBackend.h  WhisperBackend_README.md  builder_pattern_demo.cpp  debug_fixed_chunks.cpp  example_whisper_backend.cpp  language_switching_demo.cpp  livestream_asr.cpp  meson.build  setup_resources.sh  test_context_flow.cpp  test_livestream.sh  test_whisper.cpp  test_whisper.sh
